[package]
name = "epub-builder"
version = "0.5.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "A Rust library for generating EPUB files"
readme = "README.md"
keywords = ["epub"]
repository = "https://github.com/lise-henry/epub-builder/"
documentation = "https://docs.rs/epub-builder"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "epub_builder"
path = "src/lib.rs"

[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempdir"]
zip-library = ["zip"]

[dependencies]
error-chain = "0.12"
mustache = "0.9"
lazy_static = "1"
chrono = "0.4"
uuid = { version = "0.8 ", features = ["v4"] }
tempdir = { version = "0.3", optional = true } 
zip = { version = "0.5", optional = true, default-features = false, features = ["time"] } 
regex = "1"
html-escape = "0.2.6"
env_logger = "0.8"
log = "0.4"

[dev-dependencies]
pretty_assertions = "0.6"
