[package]
name = "epub-builder"
version = "0.6.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "A Rust library for generating EPUB files"
readme = "README.md"
keywords = ["epub"]
repository = "https://github.com/lise-henry/epub-builder/"
documentation = "https://docs.rs/epub-builder"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "epub_builder"
path = "src/lib.rs"

[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempdir"]
# Enable `libzip` directly to avoid non-reproducible timestamps in the zip file.
zip-library = ["libzip", "libzip/time"]

[dependencies]
eyre = "0.6.8"
mustache = "0.9"
once_cell = "1.13.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tempdir = { version = "0.3", optional = true } 
libzip = { version = "0.6", optional = true, default-features = false, features = ["deflate"], package = "zip"} 
regex = "1"
html-escape = "0.2.6"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
env_logger = "0.9"
