[package]
name = "epub-builder"
version = "0.8.0-alpha"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
description = "A Rust library for generating EPUB files"
readme = "README.md"
keywords = ["epub"]
repository = "https://github.com/lise-henry/epub-builder/"
documentation = "https://docs.rs/epub-builder"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "epub_builder"
path = "src/lib.rs"

[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempfile"]
# Enable `libzip` directly to avoid non-reproducible timestamps in the zip file.
zip-library = ["libzip", "libzip/time"]

[dependencies]
thiserror = "1.0"
once_cell = "1"
upon = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
uuid = { version = "1", features = ["v4"] }
tempfile = { version = "3", optional = true } 
libzip = { version = "2.1", optional = true, default-features = false, features = ["deflate"], package = "zip"} 
html-escape = "0.2"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
env_logger = "0.11"

[[example]]
name = "builder"

[[example]]
name = "procedural"
